<?xml version="1.0"?>
<package>
  <name>aruco_catkin</name>
  <version>0.0.0</version> 
  <description>aruco_catkin</description>
  <maintainer email="ykompis@student.ethz.ch">ykompis</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>
